--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ body,
 html,
 #root {
   height: 100%;
+   margin: 0;
 }
 
 html {
@@ -15,6 +16,7 @@ h1 {
   font-family: 'Poppins', sans-serif;
   font-size: 1.88rem;
   color: #fff;
+  margin: 0;
 }
 
 h1 .highlight {
